--- a/history.html
+++ b/history.html
@@ -13,13 +13,12 @@
 <nav>
   <ul>
     <li><a href="menu.html">メニュー</a></li>
-    <li><a href="takeout.html">持ち帰りに関する注意点</a></li>
-    <li><a href="history.html">履歴</a></li>
-    <li><a href="mypage.html">アカウント設定</a></li>
+    <li><a href="point.html">持ち帰りに関する注意点</a></li>
+    <li><a href="botan.html">ご馳走様ボタン</a></li>
   </ul>
   </nav>
 </div>
-<div class="message"><img src="url(https://assets.komeda.co.jp/eos/shop/1140.jpg);
+<div class="message">
 </div>
 </body>
 </html>
