--- a/index.html
+++ b/index.html
@@ -14,10 +14,19 @@
   <ul>
     <li><a href="login_form.html">お客様ログイン</a></li>
     <li><a href="login_form2.html">提供者ログイン</a></li>
+  
   </ul>
   </nav>
+  
 </div>
-<div class="message"><img src="url(https://assets.komeda.co.jp/eos/shop/1140.jpg);
+<div class="message">
+
+  <div class="timeline">
+    <a class="twitter-timeline" 
+    data-height="500" href="https://twitter.com/KomedaOfficial?ref_src=twsrc%5Etfw">Tweets by KomedaOfficial</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  </div>
+
+
 </div>
 </body>
 </html>
