--- a/login2.html
+++ b/login2.html
@@ -8,6 +8,6 @@
 <body>
 <h2>ログイン完了</h2>
     <p>ログインしました！</p>
-    <a href="info.html">提供者ページへ</a>
+    <a href="customer.html">提供者ページへ</a>
 </body>
 </html>
