--- a/provider.html
+++ b/provider.html
@@ -12,15 +12,12 @@
    </figure>
 <nav>
   <ul>
-    <li><a href="info.html">持ち帰り情報</a></li>
-    <li><a href="takeout2.html">持ち帰りに関する注意点</a></li>
-    <li><a href="qr.html">QRコード</a></li>
-    <li><a href="account2.html">アカウント設定</a></li>
-  
+    <li><a href="info.html">ボタン通知</a></li>
+    <li><a href="point2.html">持ち帰りに関する注意点</a></li>
   </ul>
   </nav>
 </div>
-<div class="message"><img src="url(https://assets.komeda.co.jp/eos/shop/1140.jpg);
+<div class="message">
 </div>
 </body>
 </html>
