--- a/customer.html
+++ b/customer.html
@@ -12,13 +12,12 @@
    </figure>
 <nav>
   <ul>
-    <li><a href="customer.html">お客様ログイン</a></li>
-    <li><a href="provider.html">提供者ログイン</a></li>
-  
+    <li><a href="info.html">ボタン通知  </a></li>
+    <li><a href="point2.html">持ち帰りに関する注意点</a></li>
   </ul>
   </nav>
 </div>
-<div class="message"><img src="url(https://assets.komeda.co.jp/eos/shop/1140.jpg);
+<div class="message">
 </div>
 </body>
 </html>
