--- a/signup_form2.html
+++ b/signup_form2.html
@@ -7,14 +7,7 @@
 </head>
 <body>
 <h2>ユーザ登録フォーム<h2>
-    <?php if (isset($login_err)) : ?>
-            <p><?php echo $login_err; ?></p>
-    <?php endif; ?>
-    <form action="register2.html" method="POST">
-        <p>
-            <label for="username">ユーザ名:</label>
-            <input type="text" name="username">
-        </p>
+    <form action="register.html" method="POST">
         <p>
             <label for="email">メールアドレス:</label>
             <input type="email" name="email">
@@ -27,11 +20,11 @@
             <label for="password_conf">パスワード確認:</label>
             <input type="password" name="password_conf">
         </p>
-        <input type="hidden" name="csrf_token" value="<?php echo h(setToken()); ?>">
+        
         <p>
             <input type="submit" value="新規登録">
-        </P>    
+        </p>    
     </form>
-    <a href="login_form2.html">ログインする</a>
+    <a href="login_form.html">ログインする</a>
 </body>
 </html>
