--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
 <div class="dot">
 <figure>
-    <a href="index.html"><img src="fol/logo.png">
+    <a href="index.html"><img src="fol/komudalogo.">jpg
+       
    </figure>
 <nav>
   <ul>
