--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <div class="dot">
 <figure>
-    <a href="index.html"><img src="fol/komudalogo.">jpg
+    <a href="index.html"><img src="fol/komudalogo.png">
        
    </figure>
 <nav>
