--- a/ar.html
+++ b/ar.html
@@ -8,7 +8,7 @@
 <body>
 <div class="dot">
 <figure>
-    <a href="index.html"><img src="fol/logo.png">
+    <a href="index.html"><img src="fol/komedarogo.png">
    </figure>
 <nav>
   <ul>
