--- a/takeout.html
+++ b/takeout.html
@@ -22,7 +22,7 @@
 <div class="message">
   <div class="m">
     <p>テイクアウトできる商品はこちらです↓</p>
-    <img src="/fol/menu.png">
+    <img src="fol/menu.png">
   </div>
 
 </body>
