--- a/menu.html
+++ b/menu.html
@@ -22,9 +22,11 @@
  
 <div class="m">
   <p><a href="takeout.html">テイクアウト</a></p>
+  <img src="fol/reccomend.png">
 </div>
 <div class="m">
   <p><a href="ar.html">AR</a></p>
+  <img src="fol/cat_food.png">
 </div>
 
 </div>
