--- a/ar.html
+++ b/ar.html
@@ -23,15 +23,15 @@
 
   <nav>
     <ul>
-      <div class="m">
+      <div class="ar">
       <li><a href="https://palanar.com/ar_contents/7312e5ae3a171cc7">あみ焼きチキンホットサンド</a></li>
       </div>
 
-      <div class="m">
+      <div class="ar">
       <li><a href="https://palanar.com/ar_contents/3816793e5d9709b7">みそカツパン</a></li>
       </div>
 
-      <div class="m">
+      <div class="ar">
       <li><a href="https://palanar.com/ar_contents/62e53ede76e18535">純栗ぃむ</a></li>
       </div>
     </ul>
