--- a/point.html
+++ b/point.html
@@ -18,9 +18,8 @@
   </nav>
 </div>
 
-<div class="message">
   
-  <p class="moji"><font size="30" color="#0000ff"><b>持ち帰りに関する注意点</b></b></font>
+  <p class="moji"><font size="30" color="black"><b>持ち帰りに関する注意点</b></b></font>
   </p>
     
   <p class="moji2">
@@ -41,6 +40,7 @@
   <br>
   ・少しでも怪しいと思ったら、食べるのを辞める。
   </p>
+
 </div>
 </div>
 </body>
