--- a/signup_form.html
+++ b/signup_form.html
@@ -22,7 +22,7 @@
         </p>
         
         <p>
-            <input type="submit" value="新規登録">
+            <a href="register.html"><input type="submit" value="新規登録"></a>
         </p>    
     </form>
     <a href="login_form.html">ログインする</a>
