--- a/login_form.html
+++ b/login_form.html
@@ -19,7 +19,7 @@
            
         </p>
         <p>
-            <a href="login.html"><input type="submit" value="ログイン"></a>
+            <a href="history.html"><input type="submit" value="ログイン"></a>
         </p>    
     </form>
     <a href="signup_form.html">新規登録はこちら</a>
