--- a/login_form2.html
+++ b/login_form2.html
@@ -17,7 +17,7 @@
             <input type="password" name="password">
         </p>
         <p>
-            <a href="login2.html"><input type="submit" value="ログイン"></a>
+            <a href="login2.html">ログイン</a>
         </P>    
     </form>
     <a href="signup_form2.html">新規登録はこちら</a>
