--- a/signup_form2.html
+++ b/signup_form2.html
@@ -22,9 +22,9 @@
         </p>
         
         <p>
-            <a href="register2.html"><input type="submit" value="新規登録"></a>
+            <a href="login_form2.html">新規登録</a>
         </p>    
     </form>
-    <a href="login_form.html">ログインする</a>
+    <a href="login_form2.html">ログインする</a>
 </body>
 </html>
