--- a/point2.html
+++ b/point2.html
@@ -12,13 +12,14 @@
    </figure>
 <nav>
   <ul>
-    <li><a href="info.html">ボタン通知</a></li>  
+    <li><a href="menu.html">メニュー</a></li>
+    <li><a href="botan.html">ご馳走様ボタン</a></li>
   </ul>
   </nav>
 </div>
-<div class="message">
 
-  <p class="moji"><font size="30" color="#0000ff"></font><b>持ち帰りに関する注意点</b></b></font>
+  
+  <p class="moji"><font size="30" color="black"><b>持ち帰りに関する注意点</b></b></font>
   </p>
     
   <p class="moji2">
@@ -39,8 +40,8 @@
   <br>
   ・少しでも怪しいと思ったら、食べるのを辞める。
   </p>
-</div>
 
+</div>
 </div>
 </body>
 </html>
