--- a/point2.html
+++ b/point2.html
@@ -8,12 +8,11 @@
 <body>
 <div class="dot">
 <figure>
-    <a href="index.html"><img src="fol/komudarogo.png">
+    <a href="index.html"><img src="fol/logo.png">
    </figure>
 <nav>
   <ul>
-    <li><a href="menu.html">メニュー</a></li>
-    <li><a href="botan.html">ご馳走様ボタン</a></li>
+    <li><a href="info.html">ボタン通知</a></li>  
   </ul>
   </nav>
 </div>
