--- a/point2.html
+++ b/point2.html
@@ -18,7 +18,7 @@
 </div>
 
   
-  <p class="moji"><font size="30" color="black"><b>持ち帰りに関する注意点</b></b></font>
+  <p class="moji"><font size="30" color="black"><b>持ち帰りに関する注意点</b></font>
   </p>
     
   <p class="moji2">
