--- a/point.html
+++ b/point.html
@@ -18,7 +18,7 @@
   </nav>
 </div>
 
-  
+  <div class="message">
   <p class="moji"><font size="30" color="black"><b>持ち帰りに関する注意点</b></font>
   </p>
     
@@ -41,7 +41,7 @@
   ・少しでも怪しいと思ったら、食べるのを辞める。
   </p>
 
-</div>
+
 </div>
 </body>
 </html>
