--- a/point2.html
+++ b/point2.html
@@ -17,7 +17,7 @@
   </nav>
 </div>
 
-  
+  <div class="message">
   <p class="moji"><font size="30" color="black"><b>持ち帰りに関する注意点</b></font>
   </p>
     
@@ -41,6 +41,6 @@
   </p>
 
 </div>
-</div>
+
 </body>
 </html>
